# imapautofiler

./: .coveragerc  .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  starting.sh  tox.ini
.eggs/: keyring-10.5.0-py3.6.egg
.github/workflows/: check.yml  history-update.yaml  python-publish.yml  test.yml
contrib/: Dockerfile  starting.sh
doc/source/: conf.py  configuring.rst  contributing.rst  history.rst  index.rst  installing.rst  running.rst
doc/source/api/: autoindex.rst  imapautofiler.actions.rst  imapautofiler.app.rst  imapautofiler.client.rst  imapautofiler.config.rst  imapautofiler.i18n.rst  imapautofiler.lookup.rst  imapautofiler.rules.rst  imapautofiler.secrets.rst
imapautofiler/: actions.py  app.py  client.py  config.py  i18n.py  lookup.py  rules.py  secrets.py  ui.py
imapautofiler/tests/: base.py  test_actions.py  test_config.py  test_lookup.py  test_maildir.py  test_rules.py  test_secrets.py
releasenotes/notes/: add-reno-65a040ebe662341a.yaml  check-hostname-a2610e244ce7f6e2.yaml  drop-python-3.6-77bb3180351cd195.yaml  flag-and-unflag-c3964dee9b68fb83.yaml  mark-read-and-unread-ed5ad2793142eeae.yaml  skip-ssl-34b2690375ef6260.yaml
tools/: history-update.sh  maildir_test_data.py  travis-sphinx.sh  travis.sh
