[metadata]
name = imapautofiler
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Automatically file IMAP messages
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Email

[files]
packages =
    imapautofilter

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    imapautofilter = imapautofilter.app:main
