[metadata]
name = imapautofiler
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Automatically file IMAP messages
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Email

[files]
packages =
    imapautofiler

[extras]
test =
  coverage
  testrepository
  testtools
  fixtures
  flake8
docs =
  Sphinx

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    imapautofiler = imapautofiler.app:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[pbr]
autodoc_index_modules = True
api_doc_dir = api
autodoc_exclude_modules =
   imapautofiler.tests.*